--- a/index.html
+++ b/index.html
@@ -8,16 +8,35 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <nav class="menu">
-        
-    </nav>
 
-    <!-- <nav class="menu menu-vertical">
-        <span>Item 1</span>
-        <span>Item 2</span>
-        <span>Item 3</span>
-        <span>Item 4</span>
-    </nav> -->
+    <nav class="nav">
+      <!-- <span>
+        Item 1
+        <div class="dropdown">
+          <ul>
+            <li>Item 1.1</li>
+            <li>Item 1.2</li>
+            <li>Item 1.3</li>
+            <li>Item 1.4</li>
+          </ul>
+        </div>
+      </span>
+
+      <span>
+        Item 2
+        <div class="dropdown">
+          <ul>
+            <li>Item 2.1</li>
+            <li>Item 2.2</li>
+            <li>Item 2.3</li>
+            <li>Item 2.4</li>
+          </ul>
+        </div>
+      </span>
+
+      <span>Item 3</span>
+      <span>Item 4</span> -->
+    </nav>
 
     <script src="scrip.js"></script>
   </body>
